// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider Snapshot Tests renders Slider with marks correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
      style="grid-template-columns: 0% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 2.999999999999993% 3.000000000000007% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3%;"
    >
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark firstMark"
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="left: 0px; width: 5%; border-radius: 99px; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateX(5%); transition: none;"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="5"
          aria-valuetext="5"
          class="ms-Slider-thumb"
          role="slider"
          tabindex="0"
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshot Tests renders disabled Slider correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="left: 0px; width: 50%; border-radius: 99px; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateX(50%); transition: none;"
      >
        <div
          aria-disabled="true"
          aria-valuemax="10"
          aria-valuemin="0"
          aria-valuenow="5"
          aria-valuetext="5"
          class="ms-Slider-thumb"
          role="slider"
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshot Tests renders horizontal Slider correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="left: 0px; width: 50%; border-radius: 99px; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateX(50%); transition: none;"
      >
        <div
          aria-valuemax="10"
          aria-valuemin="0"
          aria-valuenow="5"
          aria-valuetext="5"
          class="ms-Slider-thumb"
          role="slider"
          tabindex="0"
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshot Tests renders horizontal Slider with (custom marks) correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
      style="grid-template-columns: 1% 2% 4.000000000000001% 0.9999999999999991%;"
    >
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="left: 0px; width: 5%; border-radius: 99px; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateX(5%); transition: none;"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="5"
          aria-valuetext="5"
          class="ms-Slider-thumb"
          role="slider"
          tabindex="0"
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshot Tests renders horizontal origin Slider correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="left: 20%; width: 30%; border-radius: 0px 99px 99px 0px; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateX(50%); transition: none;"
      >
        <div
          aria-valuemax="10"
          aria-valuemin="0"
          aria-valuenow="5"
          aria-valuetext="5"
          class="ms-Slider-thumb"
          role="slider"
          tabindex="0"
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshot Tests renders vertical Slider correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="top: 0px; height: 50%; border-radius: 99px; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateY(50%); transition: none;"
      >
        <div
          aria-valuemax="10"
          aria-valuemin="0"
          aria-valuenow="5"
          aria-valuetext="5"
          class="ms-Slider-thumb"
          role="slider"
          tabindex="0"
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshot Tests renders vertical Slider with (custom marks) correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
      style="grid-template-rows: 2% 3% 4% 9%;"
    >
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
      <div
        class="ms-Slider-markItemContainer"
      >
        <div
          class="ms-Slider-mark "
        />
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="top: 0px; height: 5%; border-radius: 99px; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateY(5%); transition: none;"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="5"
          aria-valuetext="5"
          class="ms-Slider-thumb"
          role="slider"
          tabindex="0"
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshot Tests renders vertical origin Slider correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="top: 20%; height: 30%; border-radius: 0px 0px 99px 99px; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateY(50%); transition: none;"
      >
        <div
          aria-valuemax="10"
          aria-valuemin="0"
          aria-valuenow="5"
          aria-valuetext="5"
          class="ms-Slider-thumb"
          role="slider"
          tabindex="0"
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;
